# coinnect

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  get_pairs_name.py  keys_test.json
apis/gdax/: openapi.yaml
examples/: generic_api.rs  kraken_trading.rs  simple.rs  streaming.rs
src/: bitstamp.rs  coinnect.rs  currency.rs  error.rs  exchange.rs  exchange_bot.rs  helpers.rs  kraken.rs  lib.rs  pair.rs  poloniex.rs  types.rs
src/bitstamp/: api.rs  credentials.rs  generic_api.rs  mod.rs  models.rs  streaming_api.rs  utils.rs
src/bittrex/: api.rs  credentials.rs  generic_api.rs  mod.rs  models.rs  streaming_api.rs  utils.rs
src/gdax/: api.rs  credentials.rs  generic_api.rs  mod.rs  utils.rs
src/helpers/: json.rs  mod.rs
src/kraken/: api.rs  credentials.rs  generic_api.rs  mod.rs  utils.rs
src/poloniex/: api.rs  credentials.rs  generic_api.rs  mod.rs  utils.rs
tests/: bitstamp.rs  bittrex.rs  coinnect.rs  exchange.rs  gdax.rs  kraken.rs  poloniex.rs
