[package]
name = "coinnect"
version = "0.5.2"
license = "MIT"
authors = ["Hugues Gaillard <hugues.gaillard@me.com>", "Alejandro Inestal <ainestal@gmail.com>"]
description = """
A Rust library to connect to various crypto-currencies exchanges.
"""
documentation = "https://docs.rs/coinnect/"
homepage = "https://github.com/hugues31/coinnect"
repository = "https://github.com/hugues31/coinnect"
keywords = [ "bitcoin", "trading", "poloniex", "kraken", "bitstamp" ]
readme = "README.md"

[features]
default = []
bitstamp_private_tests = []
kraken_private_tests = []
poloniex_private_tests = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "kraken_trading"
path = "examples/kraken_trading.rs"

[[example]]
name = "generic_api"
path = "examples/generic_api.rs"

[dependencies]
hyper = "0.10.9"
serde_json = "1.0.0"
hyper-native-tls = "0.2.2"
lazy_static = "0.2"
bidir-map = "0.3.2"
data-encoding = "2.0.0-rc.1"
error-chain = "0.7.1"
sha2 = "0.6.0"
hmac = "0.3"
bigdecimal = "0.0.10"
chrono = "0.4.0"
