[package]
name = "coinnect"
version = "0.5.12"
license = "MIT"
authors = ["Hugues Gaillard <hugues.gaillard@me.com>", "Alejandro Inestal <ainestal@gmail.com>"]
description = """
A Rust library to connect to various crypto-currencies exchanges.
"""
documentation = "https://docs.rs/coinnect/"
homepage = "https://github.com/hugues31/coinnect"
repository = "https://github.com/hugues31/coinnect"
keywords = [ "bitcoin", "trading", "poloniex", "kraken", "bitstamp" ]
readme = "README.md"
edition = "2018"

[features]
default = []
bitstamp_private_tests = []
kraken_private_tests = []
poloniex_private_tests = []
bittrex_private_tests = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "kraken_trading"
path = "examples/kraken_trading.rs"

[[example]]
name = "generic_api"
path = "examples/generic_api.rs"

[dependencies]
hyper = {version = "0.13.1", features = ["stream"]}
serde_json = "1.0.0"
hyper-tls = "0.4.0"
lazy_static = "0.2"
bidir-map = "1.0.0"
data-encoding = "2.0.0-rc.1"
error-chain = "0.12.1"
sha2 = "0.6.0"
hmac = "0.4.2"
bigdecimal = "0.0.14"
chrono = "0.4.0"
url = "2.1.0"
log = "0.4.8"
futures = "0.3.1"
futures-util = "0.3.1"
actix-web = "2.0.0-rc"
awc = "1.0.1"
actix-codec = "0.2.0"
bytes = "0.5.3"
